@@ -1,10 +1,13 @@
 package upeu.mse_notification.service.impl;
 
 import lombok.RequiredArgsConstructor;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.mail.SimpleMailMessage;
 import org.springframework.mail.javamail.JavaMailSender;
 import org.springframework.stereotype.Service;
 import upeu.mse_notification.dto.NotificationResponseDTO;
+import upeu.mse_notification.dto.TemplateResponseDTO;
 import upeu.mse_notification.entity.Notification;
 import upeu.mse_notification.entity.NotificationTemplate;
 import upeu.mse_notification.repository.NotificationRepository;
@@ -14,6 +17,7 @@ import upeu.mse_notification.service.NotificationTemplateService;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,27 +27,40 @@ public class NotificationServiceImpl implements NotificationService {
     private final NotificationTemplateService templateService;
     private final JavaMailSender mailSender;
 
+    private final Logger log = LoggerFactory.getLogger(NotificationServiceImpl.class);
 
     @Override
     public List<NotificationResponseDTO> findAll() {
         return notificationRepository.findAll()
                 .stream()
-                .map(n -> NotificationResponseDTO.builder()
-                        .notificationId(n.getNotificationId())
-                        .templateCode(n.getTemplateCode())
-                        .participantId(n.getParticipantId())
-                        .registrationId(n.getRegistrationId())
-                        .attendanceId(n.getAttendanceId())
-                        .eventId(n.getEventId())
-                        .channel(n.getChannel())
-                        .title(n.getTitle())
-                        .message(n.getMessage())
-                        .status(n.getStatus())
-                        .errorMessage(n.getErrorMessage())
-                        .sentAt(n.getSentAt())
-                        .createdAt(n.getCreatedAt())
-                        .build()
-                ).toList();
+                .map(this::mapToDTO)
+                .collect(Collectors.toList());
+    }
+
+    public NotificationResponseDTO mapToDTO(Notification n) {
+        return NotificationResponseDTO.builder()
+                .notificationId(n.getNotificationId())
+                .templateCode(n.getTemplateCode())
+                .participantId(n.getParticipantId())
+                .registrationId(n.getRegistrationId())
+                .attendanceId(n.getAttendanceId())
+                .eventId(n.getEventId())
+                .channel(n.getChannel())
+                .title(n.getTitle())
+                .message(n.getMessage())
+                .status(n.getStatus())
+                .errorMessage(n.getErrorMessage())
+                .sentAt(n.getSentAt())
+                .createdAt(n.getCreatedAt())
+                .build();
+    }
+
+    @Override
+    public Notification createNotification(Notification notification) {
+        if (notification.getChannel() == null) notification.setChannel("EMAIL");
+        if (notification.getStatus() == null) notification.setStatus("PENDING");
+        if (notification.getCreatedAt() == null) notification.setCreatedAt(LocalDateTime.now());
+        return notificationRepository.save(notification);
     }
 
     @Override
@@ -60,15 +77,16 @@ public class NotificationServiceImpl implements NotificationService {
             notification.setStatus("SENT");
             notification.setSentAt(LocalDateTime.now());
 
+            log.info("Correo enviado a {}", notification.getEmailTo());
+
         } catch (Exception e) {
             notification.setStatus("ERROR");
             notification.setErrorMessage(e.getMessage());
-            e.printStackTrace();
+            log.error("Error enviando correo a {}: {}", notification.getEmailTo(), e.getMessage());
         }
 
         return notificationRepository.save(notification);
     }
-
 
     @Override
     public Notification sendUsingTemplate(
@@ -78,11 +96,10 @@ public class NotificationServiceImpl implements NotificationService {
             Long attendanceId,
             Long eventId,
             String emailTo,
-            Object dataObj
+            Map<String, Object> data
     ) {
-        Map<String, Object> data = (Map<String, Object>) dataObj;
 
-        NotificationTemplate template = templateService.getByCode(templateCode);
+        TemplateResponseDTO template = templateService.getByCode(templateCode);
 
         String message = fillTemplate(template.getBody(), data);
         String subject = fillTemplate(template.getSubject(), data);
@@ -101,19 +118,16 @@ public class NotificationServiceImpl implements NotificationService {
                 .createdAt(LocalDateTime.now())
                 .build();
 
-        notificationRepository.save(notification);
+        createNotification(notification); // guardamos antes de enviar
 
         return sendNotification(notification);
     }
 
-
     private String fillTemplate(String text, Map<String, Object> data) {
         String output = text;
-
         for (String key : data.keySet()) {
             output = output.replace("{{" + key + "}}", data.get(key).toString());
         }
-
         return output;
     }
 }
